nginx-hello-world/old_files/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-hello-world-deployment
spec:
  selector:
    matchLabels:
      app: nginx-hello-world-app
  replicas: 3
  template:
    metadata:
      labels:
        app: nginx-hello-world-app
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-hello-world-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: nginx-hello-world-volume
        configMap:
          name: nginx-hello-world-configmap
