nginx-hello-world/old_files/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: apps
  creationTimestamp: null
  labels:
    app: nginx-hello-world-app
  name: nginx-hello-world-service
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-hello-world-app
  type: ClusterIP
status:
  loadBalancer: {}
